@@ -12,6 +12,11 @@ files generated by
 
 .SH OPTIONS
 
+.BR -h " or " --help
+.RS
+show help
+.RE
+
 .BR -s " settingsfile"
 .RS
 use a settingsfile as generated by 
@@ -64,6 +69,11 @@ options are: a d k m q v w x -
 .BR -v " c"
 .RS
  add confidence to output
+.RE
+
+.BR -V " or " --version
+.RS
+show version info.
 .RE
 
 .BR -L " <file with list of frequent words>"
