@@ -17,6 +17,12 @@ This programs generates, based on a tagged corpus, all the files needed to be ab
 
 .SH OPTIONS
 
+.BR -h " or " --help
+.RS
+show help
+.RE
+
+
 .BR -T " <tagged training corpus file>"
 
 or
@@ -62,6 +68,11 @@ filter treshold for ambitag construction (default 5%)
 .BR -K " <known words instances file>"
 
 .BR -U " <unknown words instances file>"
+
+.BR -V " or " --version
+.RS
+show version info
+.RE
 
 .BR -e " <sentence delimiter> (default '<utt>')"
 
