@@ -90,7 +90,7 @@ namespace Tagger {
     void CreateSettingsFile();
     bool set_default_filenames();
     void parse_create_args( Timbl::TimblOpts& Opts );
-    void parse_run_args( Timbl::TimblOpts& Opts );
+    void parse_run_args( Timbl::TimblOpts& Opts, bool = false );
     bool isClone() const { return cloned; };
     void ShowCats( std::ostream& os, std::vector<int>& Pat, int slots );
     bool setLog( LogStream& );
